[gd_scene load_steps=11 format=2]

[ext_resource path="res://assets/fonts/Bitter-Bold.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://assets/images/ui/crown-coin.svg" type="Texture" id=2]
[ext_resource path="res://game/ui/UI.gd" type="Script" id=3]
[ext_resource path="res://assets/themes/theme.tres" type="Theme" id=4]

[sub_resource type="DynamicFont" id=5]
size = 64
use_mipmaps = true
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=6]
size = 36
use_mipmaps = true
use_filter = true
extra_spacing_bottom = 8
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=1]
size = 32
use_mipmaps = true
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 32
outline_size = 2
outline_color = Color( 0.117647, 0.117647, 0.117647, 1 )
use_mipmaps = true
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0, 0, 0, 0.752941 )

[sub_resource type="DynamicFont" id=3]
size = 32
outline_size = 5
outline_color = Color( 0, 0, 0, 1 )
use_mipmaps = true
use_filter = true
font_data = ExtResource( 1 )

[node name="UI" type="CanvasLayer"]
script = ExtResource( 3 )

[node name="ScreenFade" type="ColorRect" parent="."]
visible = false
modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WinLabel" type="Label" parent="ScreenFade"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0.784314, 0.784314, 0.784314, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 8
custom_constants/shadow_offset_y = 7
text = "Well played!"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LoseLabel" type="Label" parent="ScreenFade"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0.784314, 0.784314, 0.784314, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 8
custom_constants/shadow_offset_y = 7
text = "Checkmate!"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayAgainButton" type="Button" parent="ScreenFade/LoseLabel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -114.0
margin_top = 60.0
margin_right = 102.0
margin_bottom = 128.0
theme = ExtResource( 4 )
custom_fonts/font = SubResource( 6 )
disabled = true
text = " Play again "

[node name="Banner" type="ColorRect" parent="."]
anchor_right = 1.0
rect_min_size = Vector2( 1088, 50 )
theme = ExtResource( 4 )
color = Color( 0.117647, 0.117647, 0.117647, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BattlesLabel" type="Label" parent="Banner"]
margin_right = 40.0
margin_bottom = 14.0
rect_min_size = Vector2( 300, 50 )
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.784314, 0.784314, 0.784314, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 4
custom_constants/shadow_offset_y = 3
text = " Battles won: 0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GoldContainer" type="HBoxContainer" parent="Banner"]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -10.0
margin_bottom = 0.999996
grow_horizontal = 0
rect_min_size = Vector2( 0, 50 )
hint_tooltip = "Your current amount of gold.
Earn it by destroying enemy units or dismissing units you don't want anymore.
Use gold to buy new units on the Recruitment step."
alignment = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GoldLabel" type="Label" parent="Banner/GoldContainer"]
margin_right = 67.0
margin_bottom = 52.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.784314, 0.784314, 0.784314, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 4
custom_constants/shadow_offset_y = 3
text = "100"

[node name="ChangeLabel" type="Label" parent="Banner/GoldContainer/GoldLabel"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.894118, 0.741176, 0.12549, 1 )
text = "+50"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ChangeLabelTween" type="Tween" parent="Banner/GoldContainer/GoldLabel/ChangeLabel"]

[node name="GoldTexture" type="TextureRect" parent="Banner/GoldContainer"]
margin_left = 71.0
margin_right = 122.0
margin_bottom = 52.0
texture = ExtResource( 2 )

[node name="DismissLabel" type="Label" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1019.0
margin_top = 45.0
margin_right = -68.9999
margin_bottom = -511.0
grow_horizontal = 0
custom_styles/normal = SubResource( 4 )
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.784314, 0.784314, 0.784314, 1 )
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="."]
[connection signal="pressed" from="ScreenFade/LoseLabel/PlayAgainButton" to="." method="_on_PlayAgainButton_pressed"]
[connection signal="tween_completed" from="Banner/GoldContainer/GoldLabel/ChangeLabel/ChangeLabelTween" to="." method="_on_ChangeLabelTween_tween_completed"]
